refactor: It’s like using SpringMVC